--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 {% block title %}Об авторе проекта{% endblock %}
 {% block content %}
-<h1>Привет, я автор</h1>
+<h1 align="center">Привет, я автор</h1>
 <p>
-  Тут я размещу информацию о себе используя свои умения верстать.
-  Картинки, блоки, элементы бустрап. А может быть, просто напишу несколько абзацев текста. 
+  <h3>Несколько слов обо мне:</h3><br><br>
+  <b>Имя</b>: Иван<br>
+  <b>Год рожения</b>: 1992<br>
+  <b>Образование</b>: МФТИ (факультет НБИК) <br>
+  <b>Семейное положение</b>: женат<br>
+  <b>Мечты</b>: стать достойным программистом<br>
+  <b>Любимая цитата</b>: Краткость - сестра таланта.<br>
 </p>
 {% endblock %}
