--- a/yatube/templates/core/403csrf.html
+++ b/yatube/templates/core/403csrf.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% block header %}
+<header>
+    <h3 align="center">Упс, что-то пошло не так...</h3>
+</header>
+{% endblock%}
 {% block content %}
   <h1>Custom CSRF check error. 403</h1>
 {% endblock %}
