--- a/yatube/templates/core/403.html
+++ b/yatube/templates/core/403.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% block title %}Custom 403{% endblock %}
+{% block header %}
+<header>
+    <h3 align="center">Упс, что-то пошло не так...</h3>
+</header>
+{% endblock%}
 {% block content %}
     <h1>Custom 403</h1>
 {% endblock %}
