--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -23,7 +23,7 @@
                 Автор: {{ post.author.get_full_name }}
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
-              Всего постов автора:  <span >{{ count }}</span>
+              Всего постов автора:  <span >{{ posts.count }}</span>
             </li>
             <li class="list-group-item">
               <a href="{% url 'posts:profile' post.author.username %}">
