--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -71,7 +71,7 @@
         </a>
       </h5>
         <p>
-         {{ comment.text }}
+         {{ comment.text|linebreaksbr }}
         </p>
       </div>
     </div>
