--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -8,6 +8,8 @@
       <div class="container py-5">        
         <h1>Все посты пользователя {{ author.get_full_name }} </h1>
         <h3>Всего постов: {{ posts.count }} </h3>
+        <h3>Подписчиков: {{ author.following.count }} </h3>
+        <h3>Подписок: {{ author.follower.count }}</h3>
         {% if its_me == False %}
           {% if following %}
           <a
